fix: Dependency patching failing on linux, caused by bad path handling